--- a/base/templates/base/loppy.html
+++ b/base/templates/base/loppy.html
@@ -1,4 +1,16 @@
+{% extends 'base/main.html' %}
+{% load static %}
+{% block content %}
 
+<main>
+    <section id="form-container">
+        <img id="logo" src="{% static 'images/chat-icon.png' %}">
+        <div>
+            <h1>Islamic Chat</h1>
+            <p>You can share everything here with respect to Islam roles</p>
+        </div>
+    </section>
+    
+</main>
 
-
-<h1>loppy .html</h1>
+{% endblock content %}
