--- a/base/templates/base/loppy.html
+++ b/base/templates/base/loppy.html
@@ -9,8 +9,24 @@
             <h1>Islamic Chat</h1>
             <p>You can share everything here with respect to Islam roles</p>
         </div>
+    
+        <form id="form">
+            <div class="form-field">
+                <input type="submit" value="Join Stream">
+            </div>
+        </form>
+    
     </section>
+    
     
 </main>
 
+<script type="text/javascript">
+    let form = document.getElementById('form')
+    let handleSubmit = async (e) => {
+        e.preventDefault()
+        window.open('room/', '_self')  // _self => open this window on this tab
+    }
+    form.addEventListener('submit', handleSubmit)
+</script>
 {% endblock content %}
