--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -1,17 +1,13 @@
 {% extends 'base/main.html' %}
-
-{% block content%}
+{% load static %}
+{% block content %}
 <main>
     <section id="room-name-wrapper">
         <p>Room Name: <span id="room-name"></span></p>
     </section>
-    <section id="video-streams">
-        <div class="video-container" id="user-container-1">
-            <div class="username-wrapper"><span class="user-name">my name</span></div>
-            <div class="video-player" id="user-1"></div>
-        </div>
-        </div>
-    </section>
+    <section id="video-streams"></section> <!-- Will added values dynamically using javascript, see streams.js -- we adding the player to this element using document-->
 </main>
-{% endblock content%}
+<script src="{% static 'assets/AgoraRTC_N-4.16.0.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/streams.js' %}" type="text/javascript"></script>
+{% endblock content %}
 
