--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -46,3 +46,8 @@ body {
     margin: 2px;
     background-color: rgba(198, 202, 219, 1);
 }
+
+.video-player{
+    width: 100%;
+    height: 100%;
+}
