--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -6,6 +6,17 @@
         <p>Room Name: <span id="room-name"></span></p>
     </section>
     <section id="video-streams"></section> <!-- Will added values dynamically using javascript, see streams.js -- we adding the player to this element using document-->
+    <section id="controls-wrapper">
+        <div id="icon-wrapper">
+            <img class="control-icon" id="mic-btn" src="{% static 'images/microphone.svg' %}">
+        </div>
+        <div id="icon-wrapper">
+            <img class="control-icon" id="camera-btn" src="{% static 'images/video.svg' %}">
+        </div>
+        <div id="icon-wrapper">
+            <img class="control-icon" id="leave-btn" src="{% static 'images/leave.svg' %}">
+        </div>
+    </section>
 </main>
 <script src="{% static 'assets/AgoraRTC_N-4.16.0.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/streams.js' %}" type="text/javascript"></script>
