--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -51,3 +51,31 @@ body {
     width: 100%;
     height: 100%;
 }
+
+
+
+#controls-wrapper{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    column-gap: 1em;
+    padding: 5px 20px;
+    position: fixed;
+    bottom:20px;
+
+
+}
+
+.control-icon{
+    height: 20px;
+    width: 20px;
+    box-shadow: var(--shaddow);
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#leave-btn{
+    background-color: rgb(255, 80, 80, 1);
+}
